Rules logging sub category for each rule engine and ruleset (#1132)
* Added logging sub category for each rule engine and ruleset deployment (Closes #1126)